# wine-predictor-web

./: .gitignore  main.py  pyproject.toml  t.py
static/: scripts.js
templates/: form.html
